# assimpjs

./: .gitignore  CMakeLists.txt  README.md  build_setup_emscripten_win.bat  build_wasm_win.bat  build_wasm_win_dist.bat  build_wasm_win_release.bat  commands_deb.txt  commands_win.txt  em_build_dist.bat  em_build_win.bat  package.json  wasm_build_dist.bat  wasm_build_win_release.bat
.github/workflows/: cmake_native.yml  emscripten_build.yml  native_build.yml  npm_publish.yml  wasm_build.yml
assimpjs/: main.cpp
assimpjs/example/: main.cpp
assimpjs/src/: assimpjs.cpp  assimpjs.hpp  fileio.cpp  fileio.hpp  filelist.cpp  filelist.hpp  main.cpp
assimpjs/test/: main.cpp  node_test.js  test.html
assimpjs/test_cpp/: main.cpp
assimpjs/test_js/: browser_dragdrop_test.html
demo/: index.html
demo/source/: demo.css  demo.js
docs/: index.html
docs/source/: demo.css  demo.js  viewer.js
examples/: browser_download_test.html  browser_dragdrop_test.html  node_local_delay_load_test.js  node_local_load_test.js
test/: test.js
tools/: build_wasm_deb.sh  build_wasm_win_dist.bat  setup_emscripten_deb.sh  setup_emscripten_win.bat
